...
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/contact_name"
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_name" />

                        <Space
                            android:layout_width="4dp"
                            android:layout_height="match_parent" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/contact_surname"
                            style="@style/TextAppearance.MaterialComponents.Headline5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/contact_surname" />
                    </LinearLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/contact_username"
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_details_username" />

                    <com.google.android.material.textview.MaterialTextView
...
                            android:layout_height="wrap_content"
                            android:text="@string/managing_client_text"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:textStyle="bold" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/managing_client_value"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            style="@style/TextAppearance.MaterialComponents.Caption"
                            android:text="@string/managing_client" />

                    </LinearLayout>
...

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/contact_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_address" />
                </LinearLayout>

                <LinearLayout
...

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/contact_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_phone"
                        android:autoLink="phone"/>
                </LinearLayout>

...

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/contact_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_details" />
                </LinearLayout>
            </LinearLayout>

...
